--- a/capstone3_saladin.ipynb
+++ b/capstone3_saladin.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "Sehingga didapatkan median harga rumah aktual di California pada tahun 2022 adalah sebagaimana berikut :\n",
     "\n",
-    "(median harga rumah di California pada tahun 1990) + (median harga rumah di California pada tahun 1990) x (2.64/100) x (2022-1980)\n",
+    "(median harga rumah di California pada tahun 1990) + (median harga rumah di California pada tahun 1990) x (2.64/100) x (2022-1990)\n",
     "\n",
     "atau bisa disederhanakan menjadi :\n",
     "\n",
@@ -129,7 +129,7 @@
     "\n",
     "dan median pendapatan dari penghuni rumah di California pada tahun 2022 adalah sebagaimana berikut :\n",
     "\n",
-    "(median pendapatan dari penghuni rumah di California pada tahun 1990) + (median pendapatan dari penghuni rumah di California pada tahun 1990) x (2.64/100) x (2022-1980)\n",
+    "(median pendapatan dari penghuni rumah di California pada tahun 1990) + (median pendapatan dari penghuni rumah di California pada tahun 1990) x (2.64/100) x (2022-1990)\n",
     "\n",
     "atau bisa disederhanakan menjadi :\n",
     "\n",
@@ -137,11 +137,11 @@
     "\n",
     "Selain itu bisa didapatkan perubahan median umur perumahan sebagaimana berikut :\n",
     "\n",
-    "(median umur perumahan di California pada tahun 1990) + (2022-1980)\n",
+    "(median umur perumahan di California pada tahun 1990) + (2022-1990)\n",
     "\n",
     "atau bisa disederhanakan menjadi :\n",
     "\n",
-    "(median umur perumahan di California pada tahun 1990) + 42\n",
+    "(median umur perumahan di California pada tahun 1990) + 32\n",
     "\n",
     "Terlihat bahwa yang berubah dari data hanyalah pada kolom target dan 2 kolom pada features, sehingga model yang dibuat nantinya seharusnya bisa digunakan untuk memprediksi harga rumah di California pada tahun berapapun asalkan mendapatkan data historis inflation rates di USA."
    ]
@@ -4053,7 +4053,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Mengubah nilai fitu median pendapatan penghuni (kolom median_income) berdasarkan perubahan inflasi**"
+    "**Mengubah nilai fitur median pendapatan penghuni (kolom median_income) berdasarkan perubahan inflasi**"
    ]
   },
   {
@@ -4110,7 +4110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_tahun2022['housing_median_age'] = (X_tahun2022['housing_median_age'] + 42)\n"
+    "X_tahun2022['housing_median_age'] = (X_tahun2022['housing_median_age'] + 32)\n"
    ]
   },
   {
@@ -4535,7 +4535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [],
    "source": [
